--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile">
-          <img src="assets/img/bulat.jpg" alt="" class="img-fluid rounded-circle" />
+          <img src="assets/img/didd.png" alt="" class="img-fluid rounded-circle" />
           <h1 class="text-light"><a href="index.html">Didan Muhammad Ramdhani</a></h1>
           <div class="social-links mt-30 text-center">
             <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -101,7 +101,7 @@
 
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
-              <img src="assets/img/bulat.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/didd.png" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>Linux System Administrator &amp; Network Administrator.</h3>
@@ -110,7 +110,7 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 October 20004</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>chrz-didan.github.io</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+6285158774104</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ciamis, IDN</span></li>
                   </ul>
@@ -135,49 +135,6 @@
       <!-- End About Section -->
 
       <!-- ======= Facts Section ======= -->
-      <section id="facts" class="facts">
-        <div class="container">
-          <div class="section-title">
-            <h2>Experience</h2>
-            <p>--.</p>
-          </div>
-
-          <div class="row no-gutters">
-            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-              <div class="count-box">
-                <i class="bi bi-emoji-smile"></i>
-                <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="2" class="purecounter"></span>
-                <p><strong>Clients</strong> -</p>
-              </div>
-            </div>
-            <!--yang nol bagian kanan biar keliatan di web nya -->
-
-            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-              <div class="count-box">
-                <i class="bi bi-journal-richtext"></i>
-                <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
-                <p><strong>Projects</strong> -</p>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-              <div class="count-box">
-                <i class="bi bi-headset"></i>
-                <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
-                <p><strong>Hours Of Support</strong> -</p>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-              <div class="count-box">
-                <i class="bi bi-people"></i>
-                <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
-                <p><strong>Hard Workers</strong> -</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <!-- End Facts Section -->
 
       <!-- ======= Skills Section ======= -->
